tests/ui/single-use-lifetime/two-uses-in-inherent-method-argument-and-return.rs
// Test that we DO NOT warn for a lifetime used twice in an impl method and
// header.

#![deny(single_use_lifetimes)]
#![allow(dead_code)]
#![allow(unused_variables)]

struct Foo<'f> {
    data: &'f u32
}

impl<'f> Foo<'f> { //~ ERROR `'f` only used once
    fn inherent_a<'a>(&self, data: &'a u32) -> &'a u32{
      data
    }
}

fn main() { }

// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
//
// ferrocene-annotations: fls_fk2m2irwpeof
// Implementations
//
// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
